<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark" >

    <TextView
        android:id="@+id/one_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:padding="20dp"
        android:text="@string/first_txt"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/three_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/one_txt"
        android:background="@android:color/holo_red_dark"
        android:padding="20dp"
        android:text="@string/three_txt"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/two_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/three_txt"
        android:layout_toRightOf="@id/one_txt"
        android:background="@android:color/holo_orange_dark"
        android:padding="20dp"
        android:text="@string/two_txt"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/four_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/darker_gray"
        android:padding="20dp"
        android:text="@string/four_txt"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/five_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"
    	android:layout_centerVertical="true"
        android:background="@android:color/holo_purple"
        android:padding="20dp"
        android:text="@string/five_txt"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>