<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_text_pading"
        android:padding="@dimen/widget_text_pading"
        android:text="@string/first_txt" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_text_pading"
        android:padding="@dimen/widget_text_pading"
        
        android:background="@drawable/button_color_selector"
        
        android:textColor="@drawable/button_textcolor_selector"

        android:text="@string/two_txt"
        android:textSize="@dimen/widget_text_size" />

    <Button
        android:id="@+id/three_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_text_pading"
        android:padding="@dimen/widget_text_pading"
        
        android:background="@drawable/button_drawable_selector"
        
        android:textColor="@android:color/white"
        android:text="@string/two_txt"
        android:textSize="@dimen/widget_text_size" android:clickable="false"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/four_txt"
            android:background="@android:color/holo_blue_bright"/>
</LinearLayout>